--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "nevins",
   "version": "0.1.0",
   "private": true,
+  "main": "server/server.js",
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.1.0",
+    "express": "^4.16.4",
     "google-map-react": "^1.0.9",
+    "http-proxy-middleware": "^0.19.0",
+    "massive": "^5.5.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
