--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "massive": "^5.5.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
-    "reactjs-popup": "^1.3.0"
+    "reactjs-popup": "^1.3.0",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
