--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^16.5.2",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4",
+    "react-router-hash-link": "^1.2.1",
+    "react-scripts": "2.1.2",
     "reactjs-popup": "^1.3.0",
     "redux": "^4.0.1"
   },
